Fixed configuration properties in example config

--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,10 @@
 {
   "discordToken": "",
   "portalApiKey": "",
-  "guilds": []
+  "guilds": [
+    {
+      "guildId": 0,
+      "channelId": 0
+    }
+  ]
 }
